[project]
name = "rl_experiments"
version = "1.0"
description = "Trying out RL algorithms..."
authors = [
    {name = "Ahmed Troudi", email = "ahmed.troudi.fst@gmail.com"},
]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26.2"
]
[dev-dependencies]
pytest-mock = "*"
pytest = "*"
pylint = "*"

readme = "README.md"
license = {text = "MIT"}

